# windows-cmake-dll-version

./: CMakeLists.txt  lib.cpp  lib.h
cmake/: VersionResource.rc
